# Search_engine_imdb_movies

./: pyproject.toml
projeto/: app.py  busca.py
projeto/.streamlit/: config.toml
projeto/base_dados/: data.ipynb  filmes_imdb.csv  top_1000_imdb_movies.csv
