[project]
name = "search-engine-imdb-movies"
version = "0.1.0"
description = "Motor de busca de filmes do IMDB onde estão os melhores 1000 filmes"
authors = [
    {name = "Bruno MG Cardoso",email = "bruno.mg.cardoso.1991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
